--- a/my-facebook-clone/MyFaceBookClone/package.json
+++ b/my-facebook-clone/MyFaceBookClone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "facebook-clone",
+  "name": "myfacebookclone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.2"
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
