--- a/Facebookclone/package.json
+++ b/Facebookclone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfacebookclone",
+  "name": "facebookclone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,6 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
